--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "lodash.debounce": "^4.0.8",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vuex": "^4.0.2"
